fixed tips: spacing, border-radius, bg color, etc

--- a/src/amount-input/index.less
+++ b/src/amount-input/index.less
@@ -11,8 +11,7 @@
 
   .a-input-content {
     /* stylelint-disable-next-line */
-    // font-family: DIN Alternate; //TODO
-    font-family: @font-family-alipay-number;
+    font-family: @font-family-alipay-number, DIN Alternate;
     font-size: @font-size-amount-largenumber;
     font-size: var(--am-amount-content-font-size, @font-size-amount-largenumber);
     line-height: @line-height-base;
@@ -64,7 +63,7 @@
   &-symbol {
     width: 18px;
     /* stylelint-disable font-family-no-missing-generic-family-keyword */
-    font-family: PingFang;
+    font-family: PingFang SC;
     font-size: @font-size-amount-large;
     font-size: var(--am-amount-symbol-font-size, @font-size-amount-large);
     line-height: @line-height-base;
